Fixed issue with top margin changing on mobile CardStack swipes

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,6 +1,7 @@
 .Card {
 	height: 100vh;
 	overflow-y: hidden;
+	padding-top: 30px;
 }
 
 .TextCardPane {
