--- a/src/components/CardText/CardText.scss
+++ b/src/components/CardText/CardText.scss
@@ -2,6 +2,7 @@
 	background-color: white;
 	color: black;
 	overflow-wrap: break-word;
+	padding-top: 52px;
 
 	.FirstCardParagraph {
 		font-family: LeagueGothic;
