--- a/src/components/FeedCard/FeedCard.scss
+++ b/src/components/FeedCard/FeedCard.scss
@@ -1,3 +1,7 @@
+.FeedCard {
+	padding-top: 52px;
+}
+
 @media (min-width: 720px) {
 	.FeedCard .container {
 		overflow-x: hidden;
